# tickerflow

./: .gitignore  AGENTS.md  PLANS.md  README.md  pyproject.toml
.codex/: README.md  config.toml
docs/: ARCHITECTURE.md  CODEX_WORKFLOW.md  PROJECT_SPEC.md  QUALITY_AND_VALIDATION.md  RECRUITER_DEMO_PLAN.md
src/market_data_backend/: __init__.py
src/market_data_backend/api/: __init__.py  main.py  routes_data.py  schemas.py
src/market_data_backend/bars/: __init__.py  time_bars.py  volume_bars.py
src/market_data_backend/core/: identifiers.py  time.py
src/market_data_backend/ingestion/: csv_loader.py  normalizer.py
src/market_data_backend/query/: __init__.py  filters.py  market_data_query.py
src/market_data_backend/services/: __init__.py  bar_service.py  ingestion_service.py  query_service.py
src/market_data_backend/storage/: duckdb_query.py  parquet_store.py  partitions.py
src/market_data_backend/validation/: checks.py  report.py
src/tickerflow/: __init__.py
src/tickerflow/api/: main.py  routes_bars.py  routes_data.py  routes_demo.py  schemas.py
src/tickerflow/bars/: dollar_bars.py  time_bars.py
src/tickerflow/core/: __init__.py  schemas.py
src/tickerflow/ingestion/: __init__.py  csv_loader.py  normalizer.py  source_config.py
src/tickerflow/query/: filters.py  market_data_query.py
src/tickerflow/services/: bar_service.py  demo_service.py  ingestion_service.py  query_service.py
src/tickerflow/storage/: __init__.py  duckdb_query.py  parquet_store.py
src/tickerflow/validation/: __init__.py  checks.py
tests/fixtures/: ohlcv_clean.csv  ohlcv_dirty.csv  ohlcv_intraday.csv
tests/integration/: test_api.py  test_ohlcv_storage_query.py
tests/unit/: test_ohlcv_ingestion_validation.py  test_time_bars.py
