[project]
name = "market-data-backend"
version = "0.1.0"
description = "Python backend for local market-data ingestion, validation, storage, querying, and bars."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.0",
    "fastapi>=0.115.0",
    "polars>=1.9.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_data_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["market_data_backend"]

[[tool.mypy.overrides]]
module = ["duckdb", "polars"]
ignore_missing_imports = true
